# FirstOrganizedCMake

./: .releaserc  CMakeLists.txt
.github/workflows/: CD.yml  cmakeworkflow.yml
cmake/: FirstOrganizedCMakeConfig.cmake.in  FirstOrganizedCMakeConfig.h  FirstOrganizedCMakeConfig.h.in
include/log_lib/: print_log.h
mains/: CMakeLists.txt  hello.cpp
src/log_lib/: CMakeLists.txt  print_log.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_version.cpp
